Update InMemoryTransactionDao.java