@@ -2,9 +2,6 @@ package App.dao;
 
 import App.models.Transaction;
 
-import java.io.BufferedWriter;
-import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -12,20 +9,15 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 /**
- * Thread-safe in-memory implementation of TransactionDao.
- * Does NOT seed demo data. New transactions get UUID ids.
+ * In-memory DAO for testing (keeps the same Transaction shape with userId).
  */
 public class InMemoryTransactionDao implements TransactionDao {
-
     private final Map<String, Transaction> transactions = new ConcurrentHashMap<>();
     private static final DateTimeFormatter CSV_DATE_FMT = DateTimeFormatter.ISO_LOCAL_DATE;
 
     @Override
     public Transaction save(Transaction transaction) {
-        if (transaction == null) {
-            throw new IllegalArgumentException("Transaction cannot be null");
-        }
-        // assign id if missing
+        if (transaction == null) throw new IllegalArgumentException("Transaction cannot be null");
         if (transaction.getId() == null || transaction.getId().isBlank()) {
             transaction.setId(UUID.randomUUID().toString());
         }
@@ -34,23 +26,23 @@ public class InMemoryTransactionDao implements TransactionDao {
     }
 
     @Override
-    public List<Transaction> findAll() {
-        return transactions.values().stream()
-                .sorted(Comparator.comparing(Transaction::getDate).reversed())
-                .collect(Collectors.toList());
-    }
-
-    @Override
     public Optional<Transaction> findById(String id) {
         return Optional.ofNullable(transactions.get(id));
     }
 
     @Override
+    public List<Transaction> findAll() {
+        return transactions.values().stream()
+                .sorted(Comparator.comparing(Transaction::getDate, Comparator.nullsLast(Comparator.reverseOrder())))
+                .collect(Collectors.toList());
+    }
+
+    @Override
     public List<Transaction> findAllForUser(String userId) {
-        if (userId == null) return List.of();
+        if (userId == null) return Collections.emptyList();
         return transactions.values().stream()
                 .filter(t -> userId.equals(t.getUserId()))
-                .sorted(Comparator.comparing(Transaction::getDate).reversed())
+                .sorted(Comparator.comparing(Transaction::getDate, Comparator.nullsLast(Comparator.reverseOrder())))
                 .collect(Collectors.toList());
     }
 
@@ -61,12 +53,12 @@ public class InMemoryTransactionDao implements TransactionDao {
 
     @Override
     public void exportCsv(Path outputPath) throws Exception {
-        try (BufferedWriter writer = Files.newBufferedWriter(outputPath)) {
+        try (java.io.BufferedWriter writer = java.nio.file.Files.newBufferedWriter(outputPath)) {
             writer.write("Date,Customer,Item,Payment Method,Revenue,Cost,Profit,Notes");
             writer.newLine();
             for (Transaction t : findAll()) {
                 String line = String.format("%s,%s,%s,%s,%.2f,%.2f,%.2f,%s",
-                        t.getDate().format(CSV_DATE_FMT),
+                        t.getDate() == null ? "" : t.getDate().toString(),
                         escapeCsv(t.getCustomer()),
                         escapeCsv(t.getItem()),
                         escapeCsv(t.getPaymentMethod()),
@@ -89,12 +81,8 @@ public class InMemoryTransactionDao implements TransactionDao {
     }
 
     @Override
-    public void deleteAll() {
-        transactions.clear();
-    }
+    public void deleteAll() { transactions.clear(); }
 
     @Override
-    public int count() {
-        return transactions.size();
-    }
+    public int count() { return transactions.size(); }
 }
